--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div  class="header-container">
     <img width="192" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Angular_Logo_SVG.svg/512px-Angular_Logo_SVG.svg.png?20231112001847">
-    Header works!
+    Header works!  - A Holy Grail implementation using CSS Grid
 </div>
