Started using CSS variables and passing them values from componet clas variables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<div class="grid-container">
+<div
+  class="grid-container"
+  [style.--all-padd]="allPaddingStyle"
+  [style.--hh-large]="hhLargeStyle"
+  [style.--nrh-large]="nrhLargeStyle"
+  [style.--fh-large]="fhLargeStyle"
+>
   <header>
     <app-header></app-header>
   </header>
