Refactoring. All variables are passed in html template and stylesheet via an Object (key-values) in AppComponent class.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<div
-  class="grid-container"
-  [style.--all-padd]="allPaddingStyle"
-  [style.--hh-large]="hhLargeStyle"
-  [style.--nrh-large]="nrhLargeStyle"
-  [style.--fh-large]="fhLargeStyle"
->
+<div class="grid-container" [style]="layoutConfigStyle">
   <header>
     <app-header></app-header>
   </header>
