A 1st working implementation/approach
Responsive approaches implemented where it is needed (in components). They maybe are not the best ones, but the result is not that bad.

A new experimental Material theme created in theme.scss. The theme.scss was declared in ‘styles’ sections (under ‘build’ and ‘test’ sections, under ‘architect’ section) in angular.json file. The theme tested once and seems that it works as expected. However, I decided to comment out its entries in angular.json. I will try it in future.
Material modules used:
HeaderComponet
MatToolbarModule, MatButtonModule, MatIconModule,
NavRowComponent
MatToolbarModule, MatIconModule, MatButtonToggleModule,
LeftPaneModule
MatListModule (My intension is also to try MatMenuModule using MatButtonModule, or MatSidenavModule).
MainComponent
No any Material Component yet
RightpaneComponent
MatIconModule, MatButtonModule, MatBadgeModule,
FooterComponent
MatToolbarModule, MatIconModule

DataService and ContentService components added.
DataService is based on HttpClient and RxJs modules, and provides data access methods returning Observables for fetching data from backend. The data supposed to be articles (posts) belonging in categories. Backend is nothing but json files stored in src\assets folder (categories.json, articles.json and artcontents.json). The src\assets folder has been declared into the assets section(s) in the angular.json file. Respective interfaces are also defined in DataService.

Only the ContentService deals with DataService.  The ContentService provides Signals based on data fetched via DataService. The ContentService is injected into each component-consumer. Signals are consumed in various components via the effect() function in each component-constructor.  Only 1 effect() function allows signal writing – in the MainComponent.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,65 @@
-.header-container {
-    padding-top: 1%;
+.header-toolbar-container {
     display: flex;
-    justify-content:flex-start;
-    column-gap: 20px;
-    align-items: center;
+    flex-direction: column;
+    padding-top: 10px;
+    width: 100%;
+    height: 100%; 
+    // overflow: auto;
+
 }
+
+.header-toolbar-row-container {
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-start;
+    column-gap: 10px;
+    align-items: center;
+    // flex-shrink: 1;
+    flex-wrap: wrap;
+    // overflow: auto;
+    gap: 30px;
+}
+
+// .mat-icon-fsize{
+//     // font-size: 100px;
+//     margin: auto;
+//     transform: scale(3);
+//     color:rgb(133, 193, 181);
+//     // style = "margin: auto;"
+// }
+
+.mat-icon{
+    // font-size: 100px;
+    margin: auto;
+    transform: scale(3.5);
+    color:rgb(133, 193, 181);
+    // display: flex;
+    // display: inline-flex;
+    // align-items: center;
+    // justify-content: center;
+    // align-self: center;
+    padding-left: 4px;
+
+}
+
+@media (min-width: 320px) {
+    .header-app-title {
+      font-size: 18px;
+    //   line-height: 20px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .header-app-title {
+      font-size: 22px;
+      text-wrap: wrap;
+    //   line-height: 30px;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .header-app-title {
+      font-size: 25px;
+    //   line-height: 50px;
+    }
+  }
