--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,11 @@
-<p>main works!</p>
+<!-- <p>main works!</p> -->
+
+<div class="main-container">
+    <h1>
+        {{mainArticleContent.articleTitle}}
+    </h1>
+    <p>
+        {{mainArticleContent.articleContent}}
+    </p>
+</div>
+
