--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,11 +29,13 @@ aside.left {
 main {
   grid-area: main;
   background-color: lightgray;
+  // background-color: transparent;
 }
 
 aside.right {
   grid-area: right;
-  background-color: lightgoldenrodyellow;
+  // background-color: lightgoldenrodyellow;
+  background-color: transparent;
 }
 
 footer {
@@ -51,7 +53,7 @@ footer {
         "main"
         "right"
         "footer";
-      grid-template-columns: 1fr;   // setting columns width
+      grid-template-columns: 100%;   // setting columns width - this wraps the text in main
       //grid-template-rows: 60px min-content 1fr 1.7fr min-content min-content;
       grid-template-rows: var(--hhSmall) var(--nrhSmall) var(--lphSmall) var(--mhSmall) var(--rphSmall) var(--fhSmall);  // setting rows height
     }
@@ -68,6 +70,7 @@ footer {
         "footer footer";
       // grid-template-columns: max(200px, 20%) 1fr;
       grid-template-columns: max(var(--lpw1Medium), var(--lpw2Medium)) 1fr; // setting columns width
+      // grid-template-columns: var(--lpwMedium) 1fr; // setting columns width
       // grid-template-rows: 70px 40px 1fr 10% 50px;
       grid-template-rows: var(--hhMedium) var(--nrhMedium) 1fr var(--rphMedium) var(--fhMedium);  // setting rows height
     }
@@ -82,7 +85,8 @@ footer {
         "left main right"
         "footer footer footer";
       // grid-template-columns: max(200px, 25%) 1fr min-content; 
-      grid-template-columns: max(var(--lpw1Large), var(--lpw2Large)) 1fr var(--rpwLarge);  // setting columns width
+      // grid-template-columns: max(var(--lpw1Large), var(--lpw2Large)) 1fr var(--rpwLarge);  // setting columns width
+      grid-template-columns:  var(--min-lpwLarge) 1fr var(--rpwLarge);  // setting columns width
       // grid-template-rows: 80px 50px 1fr 60px; 
       grid-template-rows: var(--hhLarge) var(--nrhLarge) 1fr var(--fhLarge); // setting rows height
     }
