A 1st attempt to use the mat-grid-list as the basis of a holy-grail layout implementation
I created a new branch -the ‘matgridlist’ branch for the commit that only pure Angular Material has had just installed.

The most important challenge was the alignment of items inside a mat-grid-tile.
A working solution was to use a <span> element inside the mat-grid-tile, and assign to that span the specific class. Then in the specific class I used a flex container. Note, that font-size and color (background-color) was working OK, but to achieve a desirable alignment of the component enclosed, I had to set height and width to 100%.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container" [style]="layoutConfigStyle">
+<!-- <div class="grid-container" [style]="layoutConfigStyle">
   <header>
     <app-header></app-header>
   </header>
@@ -23,4 +23,58 @@
   <footer>
     <app-footer></app-footer>
   </footer>
-</div>
+</div> -->
+
+
+
+
+
+  <!-- <mat-grid-list cols="12" rowHeight="100" gutterSize="0px"> -->
+  <!-- <mat-grid-list cols="12" rowHeight="1.1:1" gutterSize="0px"> -->
+  <!-- <mat-grid-list cols="12" rowHeight="9vh" gutterSize="0px"> -->
+  <mat-grid-list cols="12" rowHeight="9vh" gutterSize="0px">
+    
+    <mat-grid-tile colspan="12" rowspan="1" >
+      <!-- Header -->
+      <span class="header-container">
+          <app-header></app-header>
+      </span>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="12" rowspan="1" >
+      <!-- NavBar -->
+      <span class="navrow-container">
+          <app-navrow></app-navrow>
+      </span>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="2" rowspan="8"ß>
+      <!-- Leftpane -->
+      <span class="leftpane-container">
+          <app-leftpane></app-leftpane> 
+      </span>
+    </mat-grid-tile>
+ß
+    <mat-grid-tile colspan="9" rowspan="8" >
+      <!-- Main -->
+       <span class="main-container">
+          <app-main></app-main>
+      </span>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="1" rowspan="8" >
+      <!-- Rightpane -->
+       <span class="rightpane-container">
+          <app-rightpane></app-rightpane>
+      </span>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="12" rowspan="1" >
+      <!-- Footer -->
+       <span class="footer-container">
+          <app-footer></app-footer>
+      </span>
+    </mat-grid-tile>
+
+  </mat-grid-list>
+
