--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,65 @@
 
 
-.grid-container {
-  height: 100%; 
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-}
+// .grid-container {
+//   height: 100%; 
+//   min-height: 100vh;
+//   margin: 0;
+//   padding: 0;
+// }
 
-header, nav, aside, main, footer {
-    padding-inline: var(--allPadding);
-}
+// header, nav, aside, main, footer {
+//     padding-inline: var(--allPadding);
+// }
 
-header {
-  grid-area: header;
+// header {
+//   grid-area: header;
+//   background-color: dodgerblue;
+// }
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start; 
+  align-items: center;
+  padding-left: 40px;
+  width: 100%;
+  height: 100%;
+  font-size: large;
   background-color: dodgerblue;
 }
 
-nav {
-  grid-area: nav;
+// nav {
+//   grid-area: nav;
+//   background-color: lightskyblue;
+// }
+
+.navrow-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around; 
+  align-items: center;
+  // padding-left: 40px;
+  // padding-top: 50px;
+  width: 100%;
+  height: 100%;
+  font-size: large;
   background-color: lightskyblue;
 }
 
-aside.left {
-  grid-area: left;
+// aside.left {
+//   grid-area: left;
+//   background-color: lightpink;
+// }
+
+.leftpane-container {
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start; 
+  align-items:flex-start ;
+  // padding-left: 40px;
+  width: 100%;
+  height: 100%;
+  font-size: small;
   background-color: lightpink;
 }
 
@@ -31,59 +68,98 @@ main {
   background-color: lightgray;
 }
 
-aside.right {
-  grid-area: right;
+.main-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start; 
+  align-items:flex-start ;
+  // padding-left: 40px;
+  width: 100%;
+  height: 100%;
+  font-size:larger ;
+  background-color: lightgray;
+}
+
+// aside.right {
+//   grid-area: right;
+//   background-color: lightgoldenrodyellow;
+// }
+
+.rightpane-container {
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start; 
+  align-items:flex-start ;
+  // padding-left: 40px;
+  width: 100%;
+  height: 100%;
+  font-size: small;
   background-color: lightgoldenrodyellow;
 }
 
-footer {
-  grid-area: footer;
+
+// footer {
+//   grid-area: footer;
+//   background-color: lightseagreen;
+// }
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around; 
+  align-items:center ;
+  // padding-left: 40px;
+  width: 100%;
+  height: 100%;
+  font-size: large;
   background-color: lightseagreen;
 }
 
+
+
 @media (min-width: 320px) {
-    .grid-container {
-      display: grid;
-      grid-template-areas:
-        "header"
-        "nav"
-        "left"
-        "main"
-        "right"
-        "footer";
-      grid-template-columns: 1fr;   // setting columns width
-      //grid-template-rows: 60px min-content 1fr 1.7fr min-content min-content;
-      grid-template-rows: var(--hhSmall) var(--nrhSmall) var(--lphSmall) var(--mhSmall) var(--rphSmall) var(--fhSmall);  // setting rows height
-    }
+    // .grid-container {
+    //   display: grid;
+    //   grid-template-areas:
+    //     "header"
+    //     "nav"
+    //     "left"
+    //     "main"
+    //     "right"
+    //     "footer";
+    //   grid-template-columns: 1fr;   // setting columns width
+    //   //grid-template-rows: 60px min-content 1fr 1.7fr min-content min-content;
+    //   grid-template-rows: var(--hhSmall) var(--nrhSmall) var(--lphSmall) var(--mhSmall) var(--rphSmall) var(--fhSmall);  // setting rows height
+    // }
   }
   
   @media (min-width: 768px) {
-    .grid-container {
-      display: grid;
-      grid-template-areas:
-        "header header"
-        "nav nav"
-        "left main"
-        "right right"
-        "footer footer";
-      // grid-template-columns: max(200px, 20%) 1fr;
-      grid-template-columns: max(var(--lpw1Medium), var(--lpw2Medium)) 1fr; // setting columns width
-      // grid-template-rows: 70px 40px 1fr 10% 50px;
-      grid-template-rows: var(--hhMedium) var(--nrhMedium) 1fr var(--rphMedium) var(--fhMedium);  // setting rows height
-    }
+    // .grid-container {
+    //   display: grid;
+    //   grid-template-areas:
+    //     "header header"
+    //     "nav nav"
+    //     "left main"
+    //     "right right"
+    //     "footer footer";
+    //   // grid-template-columns: max(200px, 20%) 1fr;
+    //   grid-template-columns: max(var(--lpw1Medium), var(--lpw2Medium)) 1fr; // setting columns width
+    //   // grid-template-rows: 70px 40px 1fr 10% 50px;
+    //   grid-template-rows: var(--hhMedium) var(--nrhMedium) 1fr var(--rphMedium) var(--fhMedium);  // setting rows height
+    // }
   }
   
   @media (min-width: 1024px) {
-    .grid-container {
-      display: grid;
-      grid-template-areas:
-        "header header header"
-        "nav nav nav"
-        "left main right"
-        "footer footer footer";
-      // grid-template-columns: max(200px, 25%) 1fr min-content; 
-      grid-template-columns: max(var(--lpw1Large), var(--lpw2Large)) 1fr var(--rpwLarge);  // setting columns width
-      // grid-template-rows: 80px 50px 1fr 60px; 
-      grid-template-rows: var(--hhLarge) var(--nrhLarge) 1fr var(--fhLarge); // setting rows height
-    }
+    // .grid-container {
+    //   display: grid;
+    //   grid-template-areas:
+    //     "header header header"
+    //     "nav nav nav"
+    //     "left main right"
+    //     "footer footer footer";
+    //   // grid-template-columns: max(200px, 25%) 1fr min-content; 
+    //   grid-template-columns: max(var(--lpw1Large), var(--lpw2Large)) 1fr var(--rpwLarge);  // setting columns width
+    //   // grid-template-rows: 80px 50px 1fr 60px; 
+    //   grid-template-rows: var(--hhLarge) var(--nrhLarge) 1fr var(--fhLarge); // setting rows height
+    // }
   }
