Using the mat-grid-list and mat-toolbars for header, navrow, and footer
DataServise and ContentService adeed and code implemented.
Backend added as json files stored in src\assets folder (categories.json, articles.json and artcontents.json). Etc.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,16 +36,16 @@
     
     <mat-grid-tile colspan="12" rowspan="1" >
       <!-- Header -->
-      <span class="header-container">
-          <app-header></app-header>
-      </span>
+      <!-- <span class="header-container"> -->
+          <app-header class="header-container"></app-header>
+      <!-- </span> -->
     </mat-grid-tile>
 
     <mat-grid-tile colspan="12" rowspan="1" >
       <!-- NavBar -->
-      <span class="navrow-container">
-          <app-navrow></app-navrow>
-      </span>
+      <!-- <span class="navrow-container"> -->
+          <app-navrow class="navrow-container"></app-navrow>
+      <!-- </span> -->
     </mat-grid-tile>
 
     <mat-grid-tile colspan="2" rowspan="8"ß>
@@ -54,7 +54,7 @@
           <app-leftpane></app-leftpane> 
       </span>
     </mat-grid-tile>
-ß
+
     <mat-grid-tile colspan="9" rowspan="8" >
       <!-- Main -->
        <span class="main-container">
@@ -71,9 +71,9 @@
 
     <mat-grid-tile colspan="12" rowspan="1" >
       <!-- Footer -->
-       <span class="footer-container">
-          <app-footer></app-footer>
-      </span>
+       <!-- <span class="footer-container"> -->
+          <app-footer class="footer-container"></app-footer>
+      <!-- </span> -->
     </mat-grid-tile>
 
   </mat-grid-list>
