--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<!-- <p>footer works!</p> -->
+<mat-toolbar class="footer-toolbar-container">
+    <mat-toolbar-row class="navrow-toolbar-row-container">
+      <!-- <a mat-button (click)="dashToggle()">
+        {{ navbarName }}
+        <mat-icon>dashboard</mat-icon>
+      </a> -->
+      <div class="copyright-container">
+        <mat-icon>copyright </mat-icon>
+        <!-- <span clas="navrow-item-spacer"> </span> -->
+        <span>
+          Copyright 2024 - Panos Zafiropoulos
+        </span>
+      </div>
+      
+    </mat-toolbar-row>
+  </mat-toolbar>
