--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,21 @@
-<div  class="header-container">
+<!-- <div  class="header-container">
     <img width="192" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Angular_Logo_SVG.svg/512px-Angular_Logo_SVG.svg.png?20231112001847">
     Header works!  - {{headerTitle}}
-</div>
+</div> -->
+
+<mat-toolbar class="header-toolbar-container">
+    <mat-toolbar-row class="header-toolbar-row-container">
+      <!-- <span > -->
+      <a mat-button style="align-self: center" routerLink="/">
+        <mat-icon matListItemIcon>home</mat-icon>
+      </a>
+      <!-- </span> -->
+      <img
+        width="192"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Angular_Logo_SVG.svg/512px-Angular_Logo_SVG.svg.png?20231112001847"
+      />
+      <span class="header-app-title">
+        {{ appHeaderTitle }}
+      </span>
+    </mat-toolbar-row>
+  </mat-toolbar>
