--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,13 +19,14 @@
 .header-container {
   display: flex;
   flex-direction: row;
-  justify-content:flex-start; 
+  // justify-content:flex-start; 
   align-items: center;
-  padding-left: 40px;
+  // padding-left: 40px;
   width: 100%;
   height: 100%;
-  font-size: large;
-  background-color: dodgerblue;
+  // font-size: large;
+  // background-color: dodgerblue;
+  // min-height: 85px;     // does not work in mat-grid-tile
 }
 
 // nav {
