Responsive layout with dynamic mat-grid-list tiles.
The BreakpointObserver and the Breakpointsare used from the Layout module from the Angular CDK.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
   <!-- </mat-grid-tile> -->
 
 
-  @for (tile of tiles; track tile) {
+  @for (tile of tiles; track tile.text) {
     <mat-grid-tile
       [colspan]="tile.cols"
       [rowspan]="tile.rows"
