matgridlist2 - Using dynamic components with mat-grid-list tiles.
The AppComponent becomes a host component and the other components that correspond to layout areas, becomes dynamic components, rendered inside mat-grid-list tiles. A helper directive has been created and used within the AppComponent template.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,17 @@
+<mat-grid-list cols="12" rowHeight="4.55vh" gutterSize="0px">
 
-
-<mat-grid-list cols="12" rowHeight="9.1vh" gutterSize="0px">
-    
-  <!-- <mat-grid-tile colspan="12" rowspan="1" style="background-color: dodgerblue"> -->
-    <!-- Header -->
-        <!-- <app-header"></app-header> -->
-  <!-- </mat-grid-tile> -->
-
-  <!-- <mat-grid-tile colspan="12" rowspan="1" style="background-color: lightskyblue"> -->
-    <!-- NavBar -->
-        <!-- <app-navrow"></app-navrow> -->
-  <!-- </mat-grid-tile> -->
-
-  <!-- <mat-grid-tile colspan="2" rowspan="8" style="background-color: lightpink"> -->
-    <!-- Leftpane -->
-        <!-- <app-leftpane></app-leftpane>  -->
-  <!-- </mat-grid-tile> -->
-
-  <!-- <mat-grid-tile colspan="9" rowspan="8" style="background-color: lightgray"> -->
-    <!-- Main -->
-        <!-- <app-main></app-main> -->
-  <!-- </mat-grid-tile> -->
-
-  <!-- <mat-grid-tile colspan="1" rowspan="8" style="background-color: lightgoldenrodyellow"> -->
-    <!-- Rightpane -->
-        <!-- <app-rightpane></app-rightpane> -->
-  <!-- </mat-grid-tile> -->
-
-  <!-- <mat-grid-tile colspan="12" rowspan="1"  style="background-color: lightseagreen"> -->
-    <!-- Footer -->
-        <!-- <app-footer></app-footer> -->
-  <!-- </mat-grid-tile> -->
-
-
-  @for (tile of tiles; track tile.text) {
-    <mat-grid-tile
-      [colspan]="tile.cols"
-      [rowspan]="tile.rows"
-      [style.background]="tile.color">
-      {{tile.text}}
-    </mat-grid-tile>
+  @for (tile of tiles; track $index) {
+  <mat-grid-tile
+    [colspan]="tile.cols"
+    [rowspan]="tile.rows"
+    [style.background]="tile.color"
+  >
+    <ng-container
+      addCompDyn
+      [compToken]="tile.text"
+    >
+    </ng-container>
+  </mat-grid-tile>
   }
-
+  
 </mat-grid-list>
