matgridlist2 – Start using Material Components inside dynamic components
Usng an enclosing <span> in the template of the AppComponent (host) with a full height/width class
Using MatToolbar in HeaderComponet
Adjustments in header-component .html and header-component.scss. Applying some @media queries

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,13 @@
 <mat-grid-list cols="12" rowHeight="4.55vh" gutterSize="0px">
-
   @for (tile of tiles; track $index) {
   <mat-grid-tile
     [colspan]="tile.cols"
     [rowspan]="tile.rows"
     [style.background]="tile.color"
   >
-    <ng-container
-      addCompDyn
-      [compToken]="tile.text"
-    >
-    </ng-container>
+    <span class="tile-container">
+      <ng-container addCompDyn [compToken]="tile.text"> </ng-container>
+    </span>
   </mat-grid-tile>
   }
-  
 </mat-grid-list>
